<resources>
  <string name="app_name">Учет инвентаря</string>
  <string name="screen_logs">Логи</string>
  <string name="screen_scanner">Сканер товара</string>
  <string name="screen_qr_generator">QR-код товара</string>
  <string name="screen_details">Инфо товара</string>
  <string name="screen_filter">Фильтр по…</string>

  <string name="event_added">Добавлено</string>
  <string name="event_removed">Удалено</string>
  <string name="event_changed">Изменено (было/стало)</string>

  <string name="hint_id">ИД товара</string>
  <string name="hint_type">Тип товара (монитор, мышь…)</string>
  <string name="hint_model">Модель</string>
  <string name="hint_manufacturer">Производитель</string>
  <string name="hint_location">Местоположение</string>
  <string name="hint_amount">Количество</string>
  <string name="button_save">Сохранить</string>
  <string name="button_delete">Удалить</string>
  <string name="button_filter">Фильтровать</string>

  <string name="permission_denied_camera">Дайте доступ к камере в настройках</string>

  <string name="alert_error">Ошибка</string>
  <string name="alert_ok">OK</string>
  <string name="alert_attention">Внимание!</string>
  <string name="alert_cancel">Отмена</string>
  <string name="no_app_for_action">Не найдено приложения для выполнения данного действия</string>
  <string name="no_app_for_settings">Невозможно открыть настройки приложения</string>
  <string name="profile_premium_manage_no_access">Похоже, у Вас не установлен Google Play. Чтобы управлять подпиской, установите его.</string>
</resources>