<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/back_bottom_sheet_dialog"
  android:padding="10dp">

  <TextView
    android:id="@+id/txt_toolbar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/screen_details"
    android:textSize="25sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
    android:id="@+id/layout_inputs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/txt_toolbar">

    <EditText
      android:id="@+id/input_id"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:hint="@string/hint_id" />

    <EditText
      android:id="@+id/input_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:hint="@string/hint_type" />

    <EditText
      android:id="@+id/input_model"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:hint="@string/hint_model" />

    <EditText
      android:id="@+id/input_manufacturer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:hint="@string/hint_manufacturer" />

    <EditText
      android:id="@+id/input_amount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:hint="@string/hint_amount" />

  </LinearLayout>

  <ProgressBar
    android:id="@+id/progress_item_info"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/btn_save"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/color_primary"
    android:text="@string/button_save"
    android:textColor="@color/white"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/layout_inputs" />

  <Button
    android:id="@+id/btn_delete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/button_delete"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>